# dns-mcp

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: diagram-freshness.yml
docs/architecture/: system-context.md
src/dns_mcp/: __init__.py  backend.py  core.py  mcp_server.py
tests/: conftest.py  fixtures.py  test_backend.py  test_core.py  test_mcp_server.py  test_workflows.py
