[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "dns-mcp"
version = "0.1.0"
description = "A provider-agnostic MCP server that performs DNS record CRUD (list/get/create/update/delete) as typed tools, with credentials resolved at call time and a pluggable backend interface."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Selamy Labs" },
]
keywords = ["agents", "mcp", "dns", "records", "porkbun", "cloud-dns"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
mcp = [
  "mcp>=1.2",
]
test = [
  "coverage[toml]>=7.6",
  "mcp>=1.2",
  "pytest>=8.3",
  "ruff>=0.8",
  "vulture>=2.14",
]

[project.scripts]
dns-mcp = "dns_mcp.mcp_server:main"

[project.urls]
Homepage = "https://github.com/selamy-labs/dns-mcp"
Repository = "https://github.com/selamy-labs/dns-mcp"
Issues = "https://github.com/selamy-labs/dns-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dns_mcp"]

[tool.coverage.run]
branch = true
source = ["dns_mcp"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C90", "RUF", "S"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
# S101: asserts are the point of tests.
"tests/**" = ["S101"]
